--- a/index.html
+++ b/index.html
@@ -49,11 +49,13 @@
           </div>
         </a>
           
+        <a href="https://cordova.world/" target="_blank">
           <div class="card">
-           <a href="https://cordova.world/" target="_blank"><h2>Cordova Gallery Website</h2></a>
+          <h2>Cordova Gallery Website</h2>
            <p>gallery website with language switch and streamlined content management built in vanilla js</p>
           </div>
         </div>
+      </a>
       </section>
 
 
