--- a/index.html
+++ b/index.html
@@ -11,7 +11,6 @@
   <body>
     <main id="mainContainer">
       <section class="splashContainer" id="splashContainer">
-
         <div class="titleContainer">
           <h1 class="">Oscar Khan-Thomas</h1>
           <h4 class="description">
@@ -23,45 +22,59 @@
             <div class="contactsLink"><p>contact</p></div>
             <div class="cvLink"><p>cv</p></div>
           </div>
-      </div>
+        </div>
+      </section>
+
       <section class="projectContainer">
         <div class="projectCards">
-
           <div class="projectTitle">
             <h2>Projects</h2>
           </div>
 
-          <a href="https://lively-creponne-c54960.netlify.app/" target="_blank"> <div class="card">
-             <h2>React Joke Rater</h2>
-             <p>an interactive joke rating program written in react as an experiment into state hooks</p>
-          </div></a>
-          <a href="https://jolly-bienenstitch-7dff0b.netlify.app" target="_blank">
+          <a href="https://cordova.world/" target="_blank">
+            <div class="card">
+              <h2>Cordova Gallery Website</h2>
+              <p>
+                gallery website with language switch and streamlined content
+                management built in vanilla js
+              </p>
+            </div>
+          </a>
+
+          <a
+            href="https://jolly-bienenstitch-7dff0b.netlify.app"
+            target="_blank"
+          >
             <div class="card">
               <h2>Nihal El Aasar Portfolio</h2>
-              <p>portfolio site that consumes strapi as a headless cms for easy updates by the client</p>
+              <p>
+                portfolio site that consumes strapi as a headless cms for easy
+                updates by the client
+              </p>
             </div>
-  
           </a>
-        
-         <a href="https://webscraper-8nbf7curercms7wwmihkwb.streamlit.app/" target="_blank"> <div class="card">
-            <h2>Python Email Address Scraper</h2>
-            <p>an experiment into webscraping built in python</p>
-          </div>
-        </a>
-          
-        <a href="https://cordova.world/" target="_blank">
-          <div class="card">
-          <h2>Cordova Gallery Website</h2>
-           <p>gallery website with language switch and streamlined content management built in vanilla js</p>
-          </div>
+
+          <a href="https://lively-creponne-c54960.netlify.app/" target="_blank">
+            <div class="card">
+              <h2>React Joke Rater</h2>
+              <p>
+                an interactive joke rating program written in react as an
+                experiment into state hooks
+              </p>
+            </div>
+          </a>
+
+          <a
+            href="https://webscraper-8nbf7curercms7wwmihkwb.streamlit.app/"
+            target="_blank"
+          >
+            <div class="card">
+              <h2>Python Email Address Scraper</h2>
+              <p>an experiment into webscraping built in python</p>
+            </div>
+          </a>
         </div>
-      </a>
       </section>
-
-
-
-
-   
     </main>
   </body>
 </html>
